--- a/carousel-task/styles.css
+++ b/carousel-task/styles.css
@@ -256,9 +256,10 @@ footer {
     background: transparent;
   }
   .slides > div {
+    border: 3px solid purple;
     scroll-snap-align: start;
     flex-shrink: 0;
-    width: 300px;
+    width: 600px;
     height: 300px;
     margin-right: 50px;
     border-radius: 10px;
@@ -290,14 +291,15 @@ footer {
   .author-info a {
     color: white;
   }
-  img {
+  
+  /*img {
     object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-  }
+  }*/
   
   .slider > a {
     display: inline-flex;
